--- a/contact.html
+++ b/contact.html
@@ -54,8 +54,9 @@
     <section id="map">
 
     <div class="row">
-    
-    <div class="mapouter"><div class="gmap_canvas"><iframe width="1078" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=sydney&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div><style>.mapouter{position:relative;text-align:right;height:500px;width:1078px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:1078px;}</style></div>
+
+    <iframe width="1078" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=sydney&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+
     </div>
 
     </section>
