Made necessary changes to paths

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <section id="contact">
     <div class="row">
       <div class="column contact-img">
-        <img src="images/b2.png" alt="Contact Us">
+        <img src="assets/media/images/b2.png" alt="Contact Us">
       </div>
       <div class="column">
       <form>
