--- a/error-page.html
+++ b/error-page.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>404</title>
+    <link rel="stylesheet" href="assets/stylesheets/reset.css">
     <link rel="stylesheet" href="assets/stylesheets/style.css">
 </head>
 
