--- a/pricing.html
+++ b/pricing.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Pricing</title>
+    <link rel="stylesheet" href="assets/stylesheets/reset.css">
     <link rel="stylesheet" href="assets/stylesheets/style.css">
 </head>
 <body>
