--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <header class="primary-header">
+        <header class="primary-header" id="primary-header">
             <div class="logo">
                 <i class="fab fa-linode logo-icon"></i>
                 <h1 class="logo-title">Startup</h1>
@@ -81,7 +81,7 @@
                 </button>   
             </div>
         </header>
-        <section class="hero">
+        <section class="index-hero">
             <div class="outer-wrapper">
                 <div class="col-2">
                     <div class="col-2-text">
@@ -316,7 +316,7 @@
             <p>&copy; 2019 Startup. All Rights Reserved</p>
 
             <div class="top">
-                <a href="#hero"><span class="fa fa-level-up"></span></a>
+                <a href="#primary-header"><span class="fa fa-level-up"></span></a>
             </div>
         </div>
     
