--- a/faqs.html
+++ b/faqs.html
@@ -48,13 +48,13 @@
                                     <a href="error-page.html" class="dropdown-link nav-link">404</a>
                                 </li>
                                 <li class="dropdown-item list-item">
-                                    <a onclick="window.location.href='#statistics';" class="dropdown-link nav-link">Statistics</a>
+                                    <a href='index.html#statistics';" class="dropdown-link nav-link">Statistics</a>
                                 </li>
                                 <li class="dropdown-item list-item">
                                     <a href="about-us.html" class="dropdown-link nav-link">Why Choose Us?</a>
                                 </li>
                                 <li class="dropdown-item list-item">
-                                    <a href="about-us.html" class="dropdown-link nav-link">Our Team</a>
+                                    <a href="about-us.html#team" class="dropdown-link nav-link">Our Team</a>
                                 </li>
                                 <li class="dropdown-item list-item">
                                     <a href="index.html#partners" class="dropdown-link nav-link">Partners</a>
