adding facts-section and partners section to aboutUs

--- a/about-us.html
+++ b/about-us.html
@@ -160,6 +160,53 @@
             </div>
         </section>
         </section>
+        <section class="facts" id="statistics" >
+                <div class="outer-wrapper">
+                    <div class="col-2">
+                        <div class="img-container">
+                            <img src="assets/media/images/b2.png" alt="comic image of a person sitting in his desk and working with his computer" class="responsive-img">
+                        </div>
+                        <div class="col-2-text facts-article">
+    
+                            <h2 class="fact-title">Some of Company Real Facts</h2>
+                            <h3 class="fact-subtitle">Excepteur sint occaecat cupidatat <br>non proident.</h3>
+                            <p class="article-text exp-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis consequatur facere doloribus fugiat.</p>
+                            <div class="stats">
+                                <div class="stat">
+                                    <h3 class="stat-number">1000+</h3>
+                                    <p class="stat-sevice">Lorem, ipsum.
+                                    </p>
+                                </div>
+                                <div class="stat">
+                                    <h3 class="stat-number">1000+</h3>
+                                    <p class="stat-sevice">Lorem, ipsum.
+                                    </p>
+                                </div>
+                                <div class="stat">
+                                    <h3 class="stat-number">1000+</h3>
+                                    <p class="stat-sevice">Lorem, ipsum.
+                                    </p>
+                                </div>
+                                <div class="stat">
+                                    <h3 class="stat-number">1000+</h3>
+                                    <p class="stat-sevice">Lorem, ipsum.
+                                    </p>
+                                </div>
+                                <div class="stat">
+                                    <h3 class="stat-number">1000+</h3>
+                                    <p class="stat-sevice">Lorem, ipsum.
+                                    </p>
+                                </div>
+                                <div class="stat">
+                                    <h3 class="stat-number">1000+</h3>
+                                    <p class="stat-sevice">Lorem, ipsum.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
         <section class="team_bg" id="team">
         <section class="wrapper team">
 
@@ -232,6 +279,45 @@
             </div>
             </div>	
         </section>
+        </section>
+        <section class="partners" id="partners">
+                <div class="outer-wrapper">
+    
+                    <header class=" partenrs-header">
+                        <h2 class="hero-title services-title partenrs-title">Our Partners</h2>
+                        <p class="services-subtitle partenrs-subtitle">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim, soluta cupiditate quae illum vel ducimus iusto ipsa? Blanditiis.</p>
+                    </header>
+                    <div class="partner-container">
+                        <div class="partner-row">
+                            <div class="partner">
+                                <i class="fab fa-angellist" class="partner-icon"></i>
+                                <h6>Angellist</h6>
+                            </div>
+                            <div class="partner">
+                                <i class="fab fa-opencart" class="partner-icon"></i>
+                                <h6>opencart</h6>
+                            </div>
+                            <div class="partner">
+                                <i class="fab fa-lastfm" class="partner-icon"></i>
+                                <h6>lastfm</h6>
+                            </div>
+                        </div>
+                        <div class="partner-row">
+                            <div class="partner">
+                                <i class="fab fa-openid" class="partner-icon"></i>
+                                <h6>openid</h6>
+                            </div>
+                            <div class="partner">
+                                <i class="fab fa-skyatlas" class="partner-icon"></i>
+                                <h6>skyatlas</h6>
+                            </div>
+                            <div class="partner">
+                                <i class="fab fa-ravelry" class="partner-icon"></i>
+                                <h6>ravelry</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </section>
         <!-- Communication Section -->
         <section id="comm">
