adding color to current nav tab

--- a/about-us.html
+++ b/about-us.html
@@ -28,7 +28,7 @@
                             <a href="index.html" class="nav-link">Home</a>
                         </li>
                         <li class="list-item">
-                            <a href="about-us.html" class="nav-link">About US</a>
+                            <a href="about-us.html" class="nav-link current-link">About US</a>
                         </li>
                         <li class="list-item">
                             <a href="pricing.html" class="nav-link">Pricing</a>
