--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                     </ul>
                 </li>
                 <li class="list-item">
-                    <a href="contact.html" class="nav-link">Contact Us</a>
+                    <a href="contact.html" class="nav-link  current-link">Contact Us</a>
                 </li>
             </div>
             </ul>
