--- a/faqs.html
+++ b/faqs.html
@@ -42,7 +42,7 @@
                                     <a href="index.html" class="dropdown-link nav-link">Services</a>
                                 </li>
                                 <li class="dropdown-item list-item">
-                                    <a href="faqs.html" class="dropdown-link nav-link">Faq's</a>
+                                    <a href="faqs.html" class="dropdown-link nav-link current-link">Faq's</a>
                                 </li>
                                 <li class="dropdown-item list-item">
                                     <a href="error-page.html" class="dropdown-link nav-link">404</a>
