--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <ul class="nav-list">
 
                     <li class="list-item">
-                        <a href="index.html" class="nav-link">Home</a>
+                        <a href="index.html" class="nav-link current-link">Home</a>
                     </li>
                     <li class="list-item">
                         <a href="about-us.html" class="nav-link">About US</a>
