--- a/pricing.html
+++ b/pricing.html
@@ -31,7 +31,7 @@
                         <a href="about-us.html" class="nav-link">About US</a>
                     </li>
                     <li class="list-item">
-                        <a href="pricing.html" class="nav-link">Pricing</a>
+                        <a href="pricing.html" class="nav-link current-link">Pricing</a>
                     </li>
                     <li class="drop-down">
                         
