--- a/error-page.html
+++ b/error-page.html
@@ -48,7 +48,7 @@
                                     <a href="faqs.html" class="dropdown-link nav-link">Faq's</a>
                                 </li>
                                 <li class="dropdown-item list-item">
-                                    <a href="error-page.html" class="dropdown-link nav-link">404</a>
+                                    <a href="error-page.html" class="dropdown-link nav-link  current-link">404</a>
                                 </li>
                                 <li class="dropdown-item list-item">
                                     <a href='index.html#statistics';" class="dropdown-link nav-link">Statistics</a>
