adding clearfix and some minor changes

--- a/error-page.html
+++ b/error-page.html
@@ -98,8 +98,8 @@
         <section id="comm">
                 <div class="comm-container">
             
-                <div class="icon">
-                <span class="fa fa-envelope"></span>
+                <div class="green-icon">
+                    <i class="fa fa-envelope"></i>
                 </div>
             
                 <h2>Stay Updated!</h2>
