Add responsiveness in about and faq

--- a/faqs.html
+++ b/faqs.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>about-us</title>
         <!-- CSS -->
         <link rel="stylesheet" href="assets/stylesheets/reset.css">
@@ -92,9 +93,9 @@
                     
                     <h2 class="faq_heading"> Frequently asked questions </h2>
                     <div>
-                        <p class="subtitle-p para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse porta erat sit.</p>
+                        <p class="article-text hero-text marginpara">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse porta erat sit.</p>
 
-                        <p class="subtitle-p para">Suspendisse porta erat sit amet eros sagittis, quis hendrerit libero aliquam. Fusce semper augue ac dolor efficitur.</p>
+                        <p class="article-text hero-text marginpara">Suspendisse porta erat sit amet eros sagittis, quis hendrerit libero aliquam. Fusce semper augue ac dolor efficitur.</p>
                     </div>
                     <div>	
                         <button class="btn">Read More</button>
