--- a/about-us.html
+++ b/about-us.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about-us</title>
     <<!-- CSS -->
     <link rel="stylesheet" href="assets/stylesheets/reset.css">
@@ -89,9 +90,9 @@
                 <span class="color"> Story About Us </span>
                 <h2 class="main_heading" > Welcome to our Website </h2>
                 <div>
-                    <p class="subtitle-p para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse porta erat sit.</p>
+                    <p class="article-text hero-text marginpara">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse porta erat sit.</p>
 
-                    <p class="subtitle-p para">Suspendisse porta erat sit amet eros sagittis, quis hendrerit libero aliquam. Fusce semper augue ac dolor efficitur.</p>
+                    <p class="article-text hero-text marginpara">Suspendisse porta erat sit amet eros sagittis, quis hendrerit libero aliquam. Fusce semper augue ac dolor efficitur.</p>
                 </div>
                 <div>	
                     <button class="btn">Read More</button>
