Added mini banner

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,12 @@
             </button>
         </div>
     </header>
-
+    <div class="banner-1">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+        <li class="breadcrumb-item">Contact Us</li>
+      </ol>
+    </div>
     <!-- Hero Section -->
   <section id="contact">
     <div class="row">
