adding bread crumbs

--- a/pricing.html
+++ b/pricing.html
@@ -80,11 +80,16 @@
                 </button>   
             </div>
     </header>
+    <div class="banner-1">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+              <li class="breadcrumb-item">Pricing</li>
+            </ol>
+    </div>
     
     <div class="price-container">
         <div class="wrapper1">
-        <div class="home"><a href="index.html" class="home-page-pricing">Home / Pricing</a></div> 
-
+       
     <div class="clearfix">
         <div class="box box1 shadow-hover"><h4 class="stan">Standard</h4>
             <hr>
