--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about-us</title>
-    <<!-- CSS -->
+    <!-- CSS -->
     <link rel="stylesheet" href="assets/stylesheets/reset.css">
     <link rel="stylesheet" href="assets/stylesheets/style.css">
     <!-- Font Awesome -->
@@ -82,8 +82,11 @@
                 </div>
         </header>
         <section class="wrapper">
-        <div class="banner">
-            <p>Home / About us</p>
+        <div class="banner-1">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item">About Us</li>
+            </ol>
         </div>
         <section class="hero">
             <div class="flex">
@@ -324,8 +327,8 @@
         <section id="comm">
             <div class="comm-container">
         
-                <div class="icon">
-                    <span class="fa fa-envelope"></span>
+                <div class="green-icon">
+                    <i class="fa fa-envelope"></i>
                 </div>
             
                 <h2>Stay Updated!</h2>
