small bug fixes

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="outer-wrapper">
 
                     <header class="services-header">
-                        <h2 class="hero-title services-title">Our Services</h2>
+                        <h2 class="services-title">Our Services</h2>
                         <p class="services-subtitle">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim, soluta cupiditate quae illum vel ducimus iusto ipsa? Blanditiis.</p>
                     </header>
                     <div class="articles service-container">
@@ -246,7 +246,7 @@
             <div class="outer-wrapper">
 
                 <header class=" partenrs-header">
-                    <h2 class="hero-title services-title partenrs-title">Our Partners</h2>
+                    <h2 class="services-title partenrs-title">Our Partners</h2>
                     <p class="services-subtitle partenrs-subtitle">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim, soluta cupiditate quae illum vel ducimus iusto ipsa? Blanditiis.</p>
                 </header>
                 <div class="partner-container">
