Adding comments to sections and adding intendations

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
+        <!-- Header -->
         <header class="primary-header" id="primary-header">
             <div class="logo">
                 <i class="fab fa-linode logo-icon"></i>
@@ -20,54 +21,55 @@
             </div>
             <div class="nav-container">
                 <div class="menu">
-                   <label for="toggle-menu" class="menu-btn">Menu</label>
+                    <label for="toggle-menu" class="menu-btn">Menu</label>
                     <input type="checkbox"  id="toggle-menu" name="toggle-menu" class="toggle-menu" hidden>
 
-                <ul class="nav-list">
+                    <ul class="nav-list">
 
-                    <li class="list-item">
-                        <a href="index.html" class="nav-link current-link">Home</a>
-                    </li>
-                    <li class="list-item">
-                        <a href="about-us.html" class="nav-link">About US</a>
-                    </li>
-                    <li class="list-item">
-                        <a href="pricing.html" class="nav-link">Pricing</a>
-                    </li>
-                    <li class="drop-down">
+                        <li class="list-item">
+                            <a href="index.html" class="nav-link current-link">Home</a>
+                        </li>
+                        <li class="list-item">
+                            <a href="about-us.html" class="nav-link">About US</a>
+                        </li>
+                        <li class="list-item">
+                            <a href="pricing.html" class="nav-link">Pricing</a>
+                        </li>
+                        <li class="drop-down">
 
-                        <label for="toggle-drop" class="nav-link">Dropdown  <i class="fa fa-angle-down"></i></label>
-                        <input type="checkbox"  id="toggle-drop" name="toggle-drop" class="toggle-drop" hidden>
+                            <label for="toggle-drop" class="nav-link">Dropdown  <i class="fa fa-angle-down"></i></label>
+                            <input type="checkbox"  id="toggle-drop" name="toggle-drop" class="toggle-drop" hidden>
 
-                        <ul class="dropdown-list">
-                            <li class="dropdown-item list-item">
-                                <a href="index.html" class="dropdown-link nav-link">Services</a>
-                            </li>
-                            <li class="dropdown-item list-item">
-                                <a href="faqs.html" class="dropdown-link nav-link">Faq's</a>
-                            </li>
-                            <li class="dropdown-item list-item">
-                                <a href="error-page.html" class="dropdown-link nav-link">404</a>
-                            </li>
-                            <li class="dropdown-item list-item">
-                                <a href="index.html#statistics" class="dropdown-link nav-link">Statistics</a>
-                            </li>
-                            <li class="dropdown-item list-item">
-                                <a href="about-us.html" class="dropdown-link nav-link">Why Choose Us?</a>
-                            </li>
-                            <li class="dropdown-item list-item">
-                                <a href="about-us.html#team" class="dropdown-link nav-link">Our Team</a>
-                            </li>
-                            <li class="dropdown-item list-item">
-                                <a href="index.html#partners" class="dropdown-link nav-link">Partners</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="list-item">
-                        <a href="contact.html" class="nav-link">Contact Us</a>
-                    </li>
+                            <ul class="dropdown-list">
+                                <li class="dropdown-item list-item">
+                                    <a href="index.html" class="dropdown-link nav-link">Services</a>
+                                </li>
+                                <li class="dropdown-item list-item">
+                                    <a href="faqs.html" class="dropdown-link nav-link">Faq's</a>
+                                </li>
+                                <li class="dropdown-item list-item">
+                                    <a href="error-page.html" class="dropdown-link nav-link">404</a>
+                                </li>
+                                <li class="dropdown-item list-item">
+                                    <a href="index.html#statistics" class="dropdown-link nav-link">Statistics</a>
+                                </li>
+                                <li class="dropdown-item list-item">
+                                    <a href="about-us.html" class="dropdown-link nav-link">Why Choose Us?</a>
+                                </li>
+                                <li class="dropdown-item list-item">
+                                    <a href="about-us.html#team" class="dropdown-link nav-link">Our Team</a>
+                                </li>
+                                <li class="dropdown-item list-item">
+                                    <a href="index.html#partners" class="dropdown-link nav-link">Partners</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="list-item">
+                            <a href="contact.html" class="nav-link">Contact Us</a>
+                        </li>
+                    
+                    </ul>
                 </div>
-                </ul>
             </div>
             <div class="search-container">
                 <form action="#"class="search-form">
@@ -81,6 +83,7 @@
                 </button>
             </div>
         </header>
+        <!-- Hero Section -->
         <section class="index-hero">
             <div class="outer-wrapper">
                 <div class="col-2">
@@ -95,6 +98,7 @@
                 </div>
             </div>
         </section>
+        <!-- Features Section -->
         <section class="features">
             <div class="outer-wrapper">
                 <div class="articles">
@@ -131,7 +135,7 @@
                 </div>
             </div>
         </section>
-
+        <!-- Experience Section -->
         <section class="exp">
             <div class="outer-wrapper">
                 <div class="col-2">
@@ -154,7 +158,7 @@
                 </div>
             </div>
         </section>
-
+        <!-- Services Section -->
         <section class="services">
             <div class="outer-wrapper">
 
@@ -193,7 +197,7 @@
                     </div>
             </div>
         </section>
-
+        <!-- Facts Section -->
         <section class="facts" id="statistics" >
             <div class="outer-wrapper">
                 <div class="col-2">
@@ -241,7 +245,7 @@
                 </div>
             </div>
         </section>
-
+        <!-- Partners Section -->
         <section class="partners" id="partners">
             <div class="outer-wrapper">
 
@@ -301,25 +305,25 @@
                     </div>
                 </form>
             </div>
-      </section>
+        </section>
         <!-- Footer -->
-      <footer class="footer">
-        <div class="footer-container">
-            <div class="social-icons">
-                <ul>
-                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                    <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                    <li><a href="#"><span class="fa fa-instagram"></span></a></li>
-                </ul>
-            </div>
-            <p>&copy; 2019 Startup. All Rights Reserved</p>
+        <footer class="footer">
+            <div class="footer-container">
+                <div class="social-icons">
+                    <ul>
+                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                        <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
+                        <li><a href="#"><span class="fa fa-instagram"></span></a></li>
+                    </ul>
+                </div>
+                <p>&copy; 2019 Startup. All Rights Reserved</p>
 
-            <div class="top">
-                <a href="#primary-header"><span class="fa fa-level-up"></span></a>
+                <div class="top">
+                    <a href="#primary-header"><span class="fa fa-level-up"></span></a>
+                </div>
             </div>
-        </div>
 
-      </footer>
+        </footer>
     </body>
 </html>
