--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
+    <!-- Header -->
     <header class="primary-header" id="primary-header">
         <div class="logo">
             <i class="fab fa-linode logo-icon"></i>
@@ -18,54 +19,55 @@
         </div>
         <div class="nav-container">
             <div class="menu">
-              <label for="toggle-menu" class="menu-btn">Menu</label>
+                <label for="toggle-menu" class="menu-btn">Menu</label>
                 <input type="checkbox"  id="toggle-menu" name="toggle-menu" class="toggle-menu" hidden>
 
-            <ul class="nav-list">
+                <ul class="nav-list">
 
-                <li class="list-item">
-                    <a href="index.html" class="nav-link">Home</a>
-                </li>
-                <li class="list-item">
-                    <a href="about-us.html" class="nav-link">About US</a>
-                </li>
-                <li class="list-item">
-                    <a href="pricing.html" class="nav-link">Pricing</a>
-                </li>
-                <li class="drop-down">
+                    <li class="list-item">
+                        <a href="index.html" class="nav-link current-link">Home</a>
+                    </li>
+                    <li class="list-item">
+                        <a href="about-us.html" class="nav-link">About US</a>
+                    </li>
+                    <li class="list-item">
+                        <a href="pricing.html" class="nav-link">Pricing</a>
+                    </li>
+                    <li class="drop-down">
 
-                    <label for="toggle-drop" class="nav-link">Dropdown  <i class="fa fa-angle-down"></i></label>
-                    <input type="checkbox"  id="toggle-drop" name="toggle-drop" class="toggle-drop" hidden>
+                        <label for="toggle-drop" class="nav-link">Dropdown  <i class="fa fa-angle-down"></i></label>
+                        <input type="checkbox"  id="toggle-drop" name="toggle-drop" class="toggle-drop" hidden>
 
-                    <ul class="dropdown-list">
-                        <li class="dropdown-item list-item">
-                            <a href="index.html" class="dropdown-link nav-link">Services</a>
-                        </li>
-                        <li class="dropdown-item list-item">
-                            <a href="faqs.html" class="dropdown-link nav-link">Faq's</a>
-                        </li>
-                        <li class="dropdown-item list-item">
-                            <a href="error-page.html" class="dropdown-link nav-link">404</a>
-                        </li>
-                        <li class="dropdown-item list-item">
-                            <a href="index.html#statistics" class="dropdown-link nav-link">Statistics</a>
-                        </li>
-                        <li class="dropdown-item list-item">
-                            <a href="about-us.html" class="dropdown-link nav-link">Why Choose Us?</a>
-                        </li>
-                        <li class="dropdown-item list-item">
-                            <a href="about-us.html#team" class="dropdown-link nav-link">Our Team</a>
-                        </li>
-                        <li class="dropdown-item list-item">
-                            <a href="index.html#partners" class="dropdown-link nav-link">Partners</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="list-item">
-                    <a href="contact.html" class="nav-link  current-link">Contact Us</a>
-                </li>
+                        <ul class="dropdown-list">
+                            <li class="dropdown-item list-item">
+                                <a href="index.html" class="dropdown-link nav-link">Services</a>
+                            </li>
+                            <li class="dropdown-item list-item">
+                                <a href="faqs.html" class="dropdown-link nav-link">Faq's</a>
+                            </li>
+                            <li class="dropdown-item list-item">
+                                <a href="error-page.html" class="dropdown-link nav-link">404</a>
+                            </li>
+                            <li class="dropdown-item list-item">
+                                <a href="index.html#statistics" class="dropdown-link nav-link">Statistics</a>
+                            </li>
+                            <li class="dropdown-item list-item">
+                                <a href="about-us.html" class="dropdown-link nav-link">Why Choose Us?</a>
+                            </li>
+                            <li class="dropdown-item list-item">
+                                <a href="about-us.html#team" class="dropdown-link nav-link">Our Team</a>
+                            </li>
+                            <li class="dropdown-item list-item">
+                                <a href="index.html#partners" class="dropdown-link nav-link">Partners</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="list-item">
+                        <a href="contact.html" class="nav-link">Contact Us</a>
+                    </li>
+                
+                </ul>
             </div>
-            </ul>
         </div>
         <div class="search-container">
             <form action="#"class="search-form">
