small bug fixes

--- a/error-page.html
+++ b/error-page.html
@@ -28,7 +28,7 @@
                     <ul class="nav-list">
 
                         <li class="list-item">
-                            <a href="index.html" class="nav-link current-link">Home</a>
+                            <a href="index.html" class="nav-link">Home</a>
                         </li>
                         <li class="list-item">
                             <a href="about-us.html" class="nav-link">About US</a>
@@ -49,7 +49,7 @@
                                     <a href="faqs.html" class="dropdown-link nav-link">Faq's</a>
                                 </li>
                                 <li class="dropdown-item list-item">
-                                    <a href="error-page.html" class="dropdown-link nav-link">404</a>
+                                    <a href="error-page.html" class="dropdown-link nav-link current-link">404</a>
                                 </li>
                                 <li class="dropdown-item list-item">
                                     <a href="index.html#statistics" class="dropdown-link nav-link">Statistics</a>
