--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
                 <ul class="nav-list">
 
                     <li class="list-item">
-                        <a href="index.html" class="nav-link current-link">Home</a>
+                        <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="list-item">
                         <a href="about-us.html" class="nav-link">About US</a>
@@ -63,7 +63,7 @@
                         </ul>
                     </li>
                     <li class="list-item">
-                        <a href="contact.html" class="nav-link">Contact Us</a>
+                        <a href="contact.html" class="nav-link  current-link">Contact Us</a>
                     </li>
                 
                 </ul>
