--- a/faqs.html
+++ b/faqs.html
@@ -25,7 +25,7 @@
                     <ul class="nav-list">
 
                         <li class="list-item">
-                            <a href="index.html" class="nav-link current-link">Home</a>
+                            <a href="index.html" class="nav-link">Home</a>
                         </li>
                         <li class="list-item">
                             <a href="about-us.html" class="nav-link">About US</a>
@@ -43,7 +43,7 @@
                                     <a href="index.html" class="dropdown-link nav-link">Services</a>
                                 </li>
                                 <li class="dropdown-item list-item">
-                                    <a href="faqs.html" class="dropdown-link nav-link">Faq's</a>
+                                    <a href="faqs.html" class="dropdown-link nav-link current-link">Faq's</a>
                                 </li>
                                 <li class="dropdown-item list-item">
                                     <a href="error-page.html" class="dropdown-link nav-link">404</a>
